modules/loadbalancer-controller/ingress-app-1/app1-ingress.yaml
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: app1-ingress
  annotations:
    cert-manager.io/cluster-issuer: "http-01-prod"
spec:
  ingressClassName: external-nginx
  rules:
    - host: app1-ingress.valerii-vasianovych.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 3000
  tls:
    - hosts:
        - app1-ingress.valerii-vasianovych.online
      secretName: app1-ingress-tls
